syntax = "proto3";
package nebulix.storage.v1;

option go_package = "nebulix/x/storage/types";

message MerkleProof {
  bytes chunk = 1; // The 1KB chunk data
  uint64 index = 2; // Position in file (0-based)
  repeated bytes siblings = 3; // Sibling hashes for Merkle path
}

message StorageChallenge {
  string challenge_id = 1;
  string file_id = 2;
  string file_merkle = 3;
  string provider = 4;
  uint64 chunk_index = 5;
  uint64 created_height = 6;
  bytes seed = 7;
  bool completed = 8;
}
